# rust-mc-status-server

./: .gitignore  Cargo.toml
config/: config.toml  make_icon
statusserver/: Cargo.toml
statusserver/src/: main.rs  packets.rs  player.rs
varint/: Cargo.toml
varint/src/: lib.rs
