[package]
name = "statusserver"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
json = "0.12.4"
lazy_static = "1.5.0"
log = "0.4.28"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
uuid = { version = "1.18.1", features = ["serde"] }
varint = { version = "0.1.0", path = "../varint" }
